# easy-rss

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cpp-plasmoid6.kdevtemplate  ecm_uninstall.cmake  prefix.sh  prefix.sh.fish
package/contents/: metadata.json
package/contents/ui/: main.qml
src/: CMakeLists.txt  main.cpp  rssreader.cpp  rssreader.h
